# qreport

./: .gitignore  Makefile  README.md  deploy_prepare.sh  deploy_update.sh  makefile.inc  nginx.conf  pyproject.toml  qreport@.service  requirements.txt
qreport/: app.py
qreport/templates/: admin.html  form.html  thanks.html
