[build-system]
requires = ["setuptools"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "qreport"
version = "0.1.0"
dependencies = [
    "flask",
    "segno",
    "gunicorn",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["qreport*"]

[tool.setuptools.package-data]
qreport = ["templates/*"]
